chore: add first site assets and markup
Add complete index.html, all site images and
styles, removed CSS Gridish in favor of Bootstrap.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,4 +2,87 @@
 // See LICENSE in the repository root for license information.
 // =============================================================================
 
-@import "gridish/grid.scss";
+// Import Roboto font face.
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700");
+
+// Import Font Awesome icons.
+@import url("https://use.fontawesome.com/releases/v5.2.0/css/all.css");
+
+// Bootstrap Overrides
+// ===================
+
+// stylelint-disable value-keyword-case
+$font-family-sans-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+// stylelint-enable value-keyword-case
+
+$gray-100: #f2f2f2 !default;
+$gray-300: #dedede !default;
+$gray-800: #333 !default;
+
+$blue: #3d70b2 !default;
+
+$border-radius: 0 !default;
+$border-radius-lg: 0 !default;
+$border-radius-sm: 0 !default;
+
+$box-shadow: none !default;
+$box-shadow-sm: none !default;
+$box-shadow-lg: none !default;
+
+.card {
+  border: 1px solid $gray-300;
+}
+
+// Import Bootstrap.
+@import "../../node_modules/bootstrap/scss/bootstrap";
+
+// Custom Rules
+// ============
+
+@include media-breakpoint-up(md) {
+  .h-md-300 {
+    height: 300px;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .h-lg-250 {
+    height: 250px;
+  }
+}
+
+.dfw-jumbotron-image {
+  min-height: 35rem;
+  background: url("/dallas_downtown.large.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@include media-breakpoint-down(sm) {
+  .dfw-jumbotron-image {
+    min-height: 20rem;
+    background: url("/dallas_downtown.small.jpg");
+    background-position-x: -15rem;
+  }
+}
+
+// stylelint-disable declaration-no-important
+.dfw-footer-align--links {
+  text-align: right !important;
+}
+
+@include media-breakpoint-down(sm) {
+  .dfw-d-sm-block-down {
+    display: block !important;
+  }
+
+  .dfw-footer-align--links {
+    text-align: left !important;
+  }
+}
+// stylelint-enable declaration-no-important
+
+.dfw-social-link {
+  text-align: center;
+}
