--- a/frontend/styles/styles.scss
+++ b/frontend/styles/styles.scss
@@ -3,98 +3,311 @@
 // =============================================================================
 
 // Import Roboto font face.
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
 
 // Import Font Awesome icons.
 @import url("https://use.fontawesome.com/releases/v5.2.0/css/all.css");
 
-// Bootstrap Overrides
-// ===================
+@import "bootstrap-overrides";
 
-// stylelint-disable value-keyword-case
-$font-family-sans-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif,
-  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-// stylelint-enable value-keyword-case
-
-$gray-100: #f2f2f2 !default;
-$gray-300: #dedede !default;
-$gray-800: #333 !default;
-
-$blue: #3d70b2 !default;
-
-$border-radius: 0 !default;
-$border-radius-lg: 0 !default;
-$border-radius-sm: 0 !default;
-
-$box-shadow: none !default;
-$box-shadow-sm: none !default;
-$box-shadow-lg: none !default;
-
-.card {
-  border: 1px solid $gray-300;
-}
-
-// Import Bootstrap.
-@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "utilities";
 
 // Custom Rules
 // ============
 
-.dfw-outdated-browser-banner {
-  background: #fffbdd;
+.smev-outdated-banner {
+  position: sticky;
+  z-index: 1000;
+  background: #fbeaae;
+
+  a {
+    font-weight: 500;
+    color: #009bef;
+  }
+
+  a:hover {
+    color: $black;
+  }
 }
 
 // stylelint-disable declaration-no-important
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .dfw-outdated-browser-banner {
+  .smev-outdated-banner {
     display: block !important;
   }
 }
 // stylelint-enable declaration-no-important
 
-@include media-breakpoint-up(md) {
-  .h-md-300 {
-    height: 300px;
+.smev-photo--profile {
+  width: 10rem;
+  height: 10rem;
+}
+
+.smev-bg--light {
+  background-color: #fff;
+}
+
+.navbar-light {
+  .navbar-nav {
+    .nav-link {
+      padding-right: 0;
+      padding-bottom: 0;
+      padding-left: 0;
+      margin-left: 1.5rem;
+      font-size: 1.2rem;
+      font-weight: 500;
+      border-bottom: 2px solid transparent;
+
+      @include hover-focus {
+        border-bottom: 2px solid $black;
+      }
+    }
   }
 }
 
-@include media-breakpoint-up(lg) {
-  .h-lg-250 {
-    height: 250px;
+@include media-breakpoint-down(md) {
+  .navbar-nav {
+    margin-bottom: 1.5rem;
+  }
+
+  .navbar-light {
+    .navbar-nav {
+      .nav-link {
+        margin-left: 0;
+
+        @include hover-focus {
+          border-bottom: 2px solid transparent;
+        }
+      }
+    }
   }
 }
 
-.dfw-jumbotron-image {
-  min-height: 35rem;
-  background: url("/dallas_downtown.large.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+.smev-home-hero__logo {
+  width: 300px;
+  height: 300px;
+}
+
+@include media-breakpoint-down(md) {
+  .smev-home-hero__logo {
+    width: 200px;
+    height: 200px;
+  }
 }
 
 @include media-breakpoint-down(sm) {
-  .dfw-jumbotron-image {
-    min-height: 20rem;
-    background: url("/dallas_downtown.small.jpg");
-    background-position-x: -15rem;
+  .smev-home-hero__logo {
+    width: 150px;
+    height: 150px;
   }
 }
 
-// stylelint-disable declaration-no-important
-.dfw-footer-align--links {
-  text-align: right !important;
+.smev-home-hero {
+  height: 100%;
+}
+
+.smev-home-hero__wrapper {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+  background: #212121;
 }
 
 @include media-breakpoint-down(sm) {
-  .dfw-d-sm-block-down {
-    display: block !important;
-  }
-
-  .dfw-footer-align--links {
-    text-align: left !important;
+  .smev-home-hero__wrapper {
+    height: 50vh;
   }
 }
-// stylelint-enable declaration-no-important
 
-.dfw-social-link {
-  text-align: center;
+.smev-home-hero__video {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  object-fit: cover;
+}
+
+// Hack to target IE and Edge only.
+// This is because IE and Edge do not support `object-fit: cover` for `video` tags.
+// See https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/13603873/#comment-0
+@supports (-ms-ime-align: auto) {
+  .smev-home-hero__video {
+    width: auto;
+    height: auto;
+  }
+}
+
+.smev-home-hero__content {
+  z-index: 1;
+  width: 100%;
+  max-width: 60rem;
+  color: #fff;
+}
+
+.smev-home-hero__arrow {
+  position: absolute;
+  right: 0;
+  bottom: 60px;
+  left: 0;
+  display: block;
+  width: 38px;
+  height: 42px;
+  font-size: 4rem;
+  color: #fff;
+}
+
+@include media-breakpoint-down(sm) {
+  .smev-home-hero__arrow {
+    bottom: calc(50vh - 20px);
+    font-size: 2.5rem;
+  }
+}
+
+.smev-header__logo {
+  width: 243px; /* For IE11 support. */
+  height: 6em;
+}
+
+@include media-breakpoint-down(md) {
+  .smev-header__logo {
+    width: 162.5px; /* For IE11 support. */
+    height: 4em;
+  }
+}
+
+.smev-section__heading {
+  font-weight: 700;
+}
+
+.smev-section__description {
+  font-size: 1.2rem;
+}
+
+.smev-section-resources {
+  color: #fff;
+  background-color: #be2031;
+}
+
+.smev-section-sponsors {
+  background-color: #fff;
+}
+
+.smev-section-leadership {
+  color: #fff;
+  background-color: #666;
+}
+
+.smev-section-contributors {
+  background-color: #5392ff;
+}
+
+.smev-resources {
+  color: #fff;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: #fff;
+  }
+}
+
+.smev-resources__icon {
+  width: 100px;
+  height: 100px;
+}
+
+.smev-button--primary {
+  color: #fff;
+  background-color: #be2031;
+  border-color: #be2031;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: #fff;
+    background-color: #25395e;
+    border-color: #25395e;
+    outline: none;
+  }
+}
+
+.smev-button--outline-primary {
+  color: #be2031;
+  background-color: transparent;
+  border-color: #be2031;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: #fff;
+    background-color: #25395e;
+    border-color: #25395e;
+    outline: none;
+  }
+}
+
+.smev-button--outline-secondary {
+  color: #25395e;
+  background-color: transparent;
+  border-color: #25395e;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: #fff;
+    background-color: #25395e;
+    border-color: #25395e;
+    outline: none;
+  }
+}
+
+.smev-button--dark {
+  color: #000;
+  border-color: #000;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: #fff;
+    background-color: #000;
+    border-color: #000;
+    outline: none;
+  }
+}
+
+.smev-leader-profile__text-container {
+  a {
+    color: #fff;
+  }
+}
+
+.smev-leader-profile__title,
+.smev-leader-profile__company {
+  font-size: 1.2rem;
+}
+
+.smev-contributor-profile__affiliation,
+.smev-contributor-profile__description {
+  font-size: 1.2rem;
+}
+
+.smev-contributor-profile__affiliation {
+  font-weight: 500;
+}
+
+.smev-footer {
+  background-color: #f2f2f2;
+}
+
+.smev-footer__fp-row {
+  align-items: flex-start;
+}
+
+.smev-footer__fp-links {
+  margin: auto 0;
+
+  & > a {
+    padding-right: 2rem;
+    color: #000;
+  }
 }
