--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
 
     {{ block "meta" . }}{{ partial "site/meta.html" . }}{{ end }}
 
-    <title>{{ block "title" . }}{{ .Site.Title -}}{{ end }}</title>
+    <title>{{ block "title" . }}{{- with .Title }}{{ . }} | {{ end }}{{ .Site.Title -}}{{ end }}</title>
 
     {{ range .AlternativeOutputFormats }}
         <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
@@ -18,7 +18,7 @@
   <body>
     {{ partial "site/outdated-browser.html" . }}
 
-    {{ block "header" . }}{{ partial "site/header.html" . }}{{ end }}
+    {{ block "header" . }}{{ end }}
 
     <main role="main">
       {{ block "banner" . }}{{ end }}
