--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -18,8 +18,9 @@
       </div>
       <div class="col-lg-10">
 
-        <article>
+        <article class="smev-blog-post">
           <h1 class="pb-4">{{ .Title }}</h1>
+
           {{ .Content }}
         </article>
 
