--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -9,9 +9,10 @@
   <section>
     <div class="pt-5 container">
       <div class="row">
-        <div class="col">
-          {{ range .Paginator.Pages }}
-            <article class="pb-5">
+        {{ range .Paginator.Pages }}
+          <div class="col-md-6">
+
+            <article id="{{ .Slug }}" class="p-4 mb-5 border-black border-solid border-2">
               {{ range .Params.tags }}
                 <a href="{{ $.Site.BaseURL }}tags/{{ . | urlize }}" class="mb-3 mr-2 text-base badge badge-primary">{{ . }}</a>
               {{ end }}
@@ -21,10 +22,11 @@
                 <div class="pt-2">Read Article</div>
               </a>
             </article>
-          {{ end }}
 
-          {{ template "_internal/pagination.html" . }}
-        </div>
+          </div>
+        {{ end }}
+
+        {{ template "_internal/pagination.html" . }}
       </div>
     </div>
   </section>
