remove references to SME Texaplex, SME DFW has merged with SME Virtual
Closes #32

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,13 +6,13 @@
 
 <section>
   <div class="smev--container smev--pt--layout--5 smev--pb--layout--3">
-    <a href="{{ .Site.Params.external.smetexaplex_homepage_url }}">
+    <a href="{{ .Site.Params.external.smevirtual_homepage_url }}">
       <img class="smev--header__logo" src="logo--15x--light.svg" alt="{{ .Site.Title }}" />
     </a>
-    <h1 class="smev--section-header__light smev--py--layout--3">The SME DFW Chapter is now the SME Texaplex Virtual Chapter!</h1>
+    <h1 class="smev--section-header__light smev--py--layout--3">The SME DFW Chapter has merged with the SME Virtual Network!</h1>
     <ul class="smev--links-list">
       <li>
-        <a href="{{ .Site.Params.external.smetexaplex_homepage_url }}">Visit the SME Texaplex homepage</a>
+        <a href="{{ .Site.Params.external.smevirtual_homepage_url }}">Visit the SME Virtual Network homepage</a>
       </li>
     </ul>
   </div>
