--- a/layouts/partials/site/meta.html
+++ b/layouts/partials/site/meta.html
@@ -34,8 +34,8 @@
 <link rel="manifest" href="site.webmanifest">
 <link rel="mask-icon" href="safari-pinned-tab.svg" color="#3151b7">
 <link rel="shortcut icon" href="favicon.ico">
-<meta name="apple-mobile-web-app-title" content="SME Texaplex">
-<meta name="application-name" content="SME Texaplex">
+<meta name="apple-mobile-web-app-title" content="SME Virtual Network">
+<meta name="application-name" content="SME Virtual Network">
 <meta name="msapplication-TileColor" content="#ff0000">
 <meta name="msapplication-TileImage" content="mstile-144x144.png">
 <meta name="theme-color" content="#ffffff"></head>
